[tool.poetry]
name = "async-iterator"
version = "0.1.0"
description = ""
authors = ["lpthong90 <lpthong90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
anyio = "^4.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
